--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Git Repo</title>
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <h1>My first Github Repo</h1>
+     <div>
+          <p>
+               Github Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea facilis sit voluptate iure natus molestiae dignissimos atque reprehenderit facere. Non incidunt maxime ullam fuga vero voluptatibus obcaecati tenetur quo atque!
+          </p>
+     </div>
 </body>
 </html>
